Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -12159,10 +12159,10 @@ Error message and password prompt
 <div created="20210602141535668" creator="zeid" modified="20210831181004809" modifier="zeid" title="$:/state/tab2--1311305590">
 <pre>php</pre>
 </div>
-<div created="20210826160606675" creator="zeid" modified="20211004100428460" modifier="zeid" title="$:/state/tab2--2017306950">
+<div created="20210826160606675" creator="zeid" modified="20211004101947740" modifier="zeid" title="$:/state/tab2--2017306950">
 <pre>zest</pre>
 </div>
-<div created="20210826160602899" creator="zeid" modified="20210902121608665" modifier="zeid" title="$:/state/tab2--2135597508">
+<div created="20210826160602899" creator="zeid" modified="20211004101943604" modifier="zeid" title="$:/state/tab2--2135597508">
 <pre>Пак Звезда</pre>
 </div>
 <div created="20210602140213588" modified="20210602140717715" title="$:/state/tab2-1422387773">
@@ -12369,7 +12369,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20211004091810686" creator="zeid" list="[[Using the Map Editor - Part 1]] [[Chandra - assembly]] [[Zvezda - gitee]] Home" modified="20211004100431677" modifier="zeid" title="$:/StoryList">
+<div created="20211004091810686" creator="zeid" list="[[Coffee css]] [[Using the Map Editor - Part 1]] [[Chandra - assembly]] [[Zvezda - gitee]] Home" modified="20211004101948740" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13970,7 +13970,7 @@ $(currentTiddler)$
 
 </pre>
 </div>
-<div created="20210603083811964" modified="20210826161729052" tags="$:/tags/Stylesheet zest" title="Coffee css" type="text/css">
+<div created="20210603083811964" creator="zeid" modified="20211004102019237" modifier="zeid" tags="$:/tags/Stylesheet zest" title="Coffee css" type="text/css">
 <pre>.lua.hljs, .elixir.hljs{
 max-height:300px;
 }
@@ -13992,6 +13992,10 @@ border-radius:10px;
 
 a, a:visited{
 	color:#fd8;
+}
+
+h3{
+	color: #2aa198;
 }</pre>
 </div>
 <div _canonical_uri="https://daidalvi.github.io/ja/images/coffee/1a52174bc1bf2efc5d19346faf890d38.jpg" created="20210602084606160" modified="20210602084650935" tags="eimg" title="Coffee1.jpg" type="image/jpeg">
