--- a/cafe.html
+++ b/cafe.html
@@ -13970,7 +13970,7 @@ $(currentTiddler)$
 
 </pre>
 </div>
-<div created="20210603083811964" creator="zeid" modified="20211004102019237" modifier="zeid" tags="$:/tags/Stylesheet zest" title="Coffee css" type="text/css">
+<div created="20210603083811964" creator="zeid" modified="20211004102054261" modifier="zeid" tags="$:/tags/Stylesheet zest" title="Coffee css" type="text/css">
 <pre>.lua.hljs, .elixir.hljs{
 max-height:300px;
 }
@@ -13995,7 +13995,7 @@ a, a:visited{
 }
 
 h3{
-	color: #2aa198;
+	color: #35d6ca;
 }</pre>
 </div>
 <div _canonical_uri="https://daidalvi.github.io/ja/images/coffee/1a52174bc1bf2efc5d19346faf890d38.jpg" created="20210602084606160" modified="20210602084650935" tags="eimg" title="Coffee1.jpg" type="image/jpeg">
