Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -13970,7 +13970,7 @@ $(currentTiddler)$
 
 </pre>
 </div>
-<div created="20210603083811964" creator="zeid" modified="20211004102054261" modifier="zeid" tags="$:/tags/Stylesheet zest" title="Coffee css" type="text/css">
+<div created="20210603083811964" creator="zeid" modified="20211004102408581" modifier="zeid" tags="$:/tags/Stylesheet zest" title="Coffee css" type="text/css">
 <pre>.lua.hljs, .elixir.hljs{
 max-height:300px;
 }
@@ -13996,6 +13996,10 @@ a, a:visited{
 
 h3{
 	color: #35d6ca;
+}
+
+h4{
+	    color: #d33682;
 }</pre>
 </div>
 <div _canonical_uri="https://daidalvi.github.io/ja/images/coffee/1a52174bc1bf2efc5d19346faf890d38.jpg" created="20210602084606160" modified="20210602084650935" tags="eimg" title="Coffee1.jpg" type="image/jpeg">
