Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -13970,7 +13970,7 @@ $(currentTiddler)$
 
 </pre>
 </div>
-<div created="20210603083811964" creator="zeid" modified="20211004102408581" modifier="zeid" tags="$:/tags/Stylesheet zest" title="Coffee css" type="text/css">
+<div created="20210603083811964" creator="zeid" modified="20211004102510141" modifier="zeid" tags="$:/tags/Stylesheet zest" title="Coffee css" type="text/css">
 <pre>.lua.hljs, .elixir.hljs{
 max-height:300px;
 }
@@ -13999,7 +13999,7 @@ h3{
 }
 
 h4{
-	    color: #d33682;
+	    color: #ff449e;
 }</pre>
 </div>
 <div _canonical_uri="https://daidalvi.github.io/ja/images/coffee/1a52174bc1bf2efc5d19346faf890d38.jpg" created="20210602084606160" modified="20210602084650935" tags="eimg" title="Coffee1.jpg" type="image/jpeg">
