Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -557,6 +557,8 @@ Error message and password prompt
 
 <li>RadioService</li>
 
+<li>ROOMPLAN</li>
+
 <li>Sigma-3</li>
 
 <li>task</li>
@@ -12369,7 +12371,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20211004091810686" creator="zeid" list="[[Coffee css]] [[Using the Map Editor - Part 1]] [[Chandra - assembly]] [[Zvezda - gitee]] Home" modified="20211004101948740" modifier="zeid" title="$:/StoryList">
+<div created="20211004091810686" creator="zeid" list="ROOMPLAN [[Coffee css]] [[Using the Map Editor - Part 1]] [[Chandra - assembly]] [[Zvezda - gitee]] Home" modified="20211004101948740" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -14405,6 +14407,108 @@ enum class Functions {
 [[radio_service.zdl]]
 
 {{radio_service.zdl}}</pre>
+</div>
+<div created="20211004102647947" creator="zeid" modified="20211004102845093" modifier="zeid" tags="DS DS-tutorial" title="ROOMPLAN">
+<pre>
+						&lt;center&gt;
+							&lt;p&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;This Page is for Metaroom developers . To coordinate coordinates:).&lt;br&gt;
+							&lt;br&gt;
+							&lt;/b&gt;Here is a picture of all rooms that have been developed as far as I know. If you click on the image below you will get a 1:10 scale roomplan which can make it easyer to find out where yor room could easyly fit in. Filled zones are rooms that have been published, Outlines are rooms in development&lt;br&gt;
+							&lt;b style=&quot;color: #ffffff&quot;&gt;&lt;br&gt;
+							&lt;a href=&quot;https://web.archive.org/web/20020627231414im_/http://wuk.at/happy/norngarden/pics/roomplan.gif&quot; target=&quot;_new&quot; style=&quot;&quot;&gt;&lt;img height=&quot;331&quot; width=&quot;340&quot; src=&quot;https://web.archive.org/web/20020627231414im_/http://wuk.at/happy/norngarden/pics/roomplankl.gif&quot; border=&quot;1&quot;&gt;&lt;/a&gt;&lt;/b&gt;&lt;/p&gt;
+							&lt;p&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;&lt;br&gt;
+							Officials:&lt;/b&gt;&lt;/p&gt;
+						&lt;/center&gt;
+						&lt;div align=&quot;left&quot;&gt;
+							&lt;ul&gt;
+								&lt;p&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;C3&lt;br&gt;
+								&lt;/b&gt;&lt;b&gt;Norn Terrarium: &lt;/b&gt;Left: 0 Top: 0 Width: 4112 Height: 1300&lt;br&gt;
+								&lt;b&gt;Ettin Desert:&lt;/b&gt; Left: 4215 Top: 0 Width: 2968 Height: 1200&lt;br&gt;
+								&lt;b&gt;Aqua Zone:&lt;/b&gt; Left: 3270 Top: 1569 Width: 2924 Height: 1168&lt;br&gt;
+								&lt;b&gt;Grendel Jungle:&lt;/b&gt; Left: 14 Top: 1363 Width: 3000 Height: 1400&lt;br&gt;
+								&lt;b&gt;Main: &lt;/b&gt;Left: 76 Top: 2866 Width: 6868 Height: 1652&lt;br&gt;
+								&lt;b&gt;Pinball:&lt;/b&gt; Left: 7220 Top: 670 Width: 796 Height: 596&lt;br&gt;
+								&lt;b&gt;Space&lt;/b&gt;: Left: 7210 Top: 29 Width: 800 Height: 600&lt;br&gt;
+								&lt;b&gt;Learning Room:&lt;/b&gt; Left: 8209 Top: 46 Width: 800 Height: 600&lt;br&gt;
+								&lt;b&gt;Crypt&lt;/b&gt;: Left: 8206 Top: 688 Width: 800 Height: 600&lt;br&gt;
+								&lt;b&gt;Blank:&lt;/b&gt; Left: 4145 Top: 1252 Width: 400 Height: 300&lt;br&gt;
+								&lt;/p&gt;
+								&lt;p&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;Dockingstation:&lt;br&gt;
+								&lt;/b&gt;&lt;b&gt;Nornmeso:&lt;/b&gt; Left: 281 Top: 8736 Width: 1600 Height: 1012&lt;br&gt;
+								&lt;b&gt;Corridor:&lt;/b&gt; Left: 2071 Top: 8732 Width: 1124 Height: 832&lt;br&gt;
+								&lt;b&gt;Workshop:&lt;/b&gt; Left: 4277 Top: 8669 Width: 1540 Height: 960&lt;br&gt;
+								&lt;b&gt;Comms:&lt;/b&gt; Left: 5909 Top: 8678 Width: 800 Height: 600&lt;br&gt;
+								&lt;br&gt;
+								&lt;b style=&quot;color: #ffffff&quot;&gt;Northpole: &lt;/b&gt;Left: 0 Top: 4600 Width: 3200 Height: 1200&lt;br&gt;
+								&lt;/p&gt;
+							&lt;/ul&gt;
+						&lt;/div&gt;
+						&lt;center&gt;
+							&lt;p&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;3rd Party Rooms:&lt;/b&gt;&lt;/p&gt;
+						&lt;/center&gt;
+						&lt;div align=&quot;left&quot;&gt;
+							&lt;ul&gt;
+								&lt;p&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;Infirmary:&lt;/b&gt; Left: 6740 Top: 1550 Width: 800 Height: 600 -&amp;gt;&lt;a href=&quot;https://web.archive.org/web/20030626090746/http://www.shee.demon.co.uk/&quot; target=&quot;_new&quot;&gt;get it here&lt;/a&gt;&lt;br&gt;
+								&lt;b style=&quot;color: #ffffff&quot;&gt;&lt;br&gt;
+								PhotoRoom: &lt;/b&gt;Left: 6740 Top: 4550 Width: 800 Height: 600&lt;br&gt;
+								&lt;b style=&quot;color: #ffffff&quot;&gt;&lt;br&gt;
+								New Injector for DS: &lt;/b&gt;Left: 3400 Top: 4550 Width: 800 Height: 600-&amp;gt;&lt;a href=&quot;https://web.archive.org/web/20030626090746/http://uaine.chani3.com/&quot; target=&quot;_new&quot;&gt;get it here&lt;/a&gt;&lt;br&gt;
+								&lt;b style=&quot;color: #ffffff&quot;&gt;&lt;br&gt;
+								Mt. Threstle: &lt;/b&gt;Left: 8800 Top: 7600 Width: 800 Height: 600-&amp;gt;&lt;a href=&quot;https://web.archive.org/web/20030626090746/http://www.memlinks.com/creatures/&quot; target=&quot;_new&quot;&gt;get it here&lt;/a&gt;&lt;br&gt;
+								&lt;br&gt;
+								&lt;b style=&quot;color: #ffffff&quot;&gt;Randoms Room: &lt;/b&gt;Left: 8000 Top: 4000 Width: 1536 Height: 1280 -&amp;gt;&lt;a href=&quot;https://web.archive.org/web/20030626090746/http://mainframe.chani3.com/&quot; target=&quot;_new&quot;&gt;get it here&lt;/a&gt;&lt;br&gt;
+								&lt;b style=&quot;color: #ffffff&quot;&gt;&lt;br&gt;
+								Norngarden: &lt;/b&gt;Left: 6950 Top: 8900 Width: 1920 Height: 1024&lt;br&gt;
+								&lt;b style=&quot;color: #ffffff&quot;&gt;Norngarden Xmas Room: &lt;/b&gt;Left: 5900 Top: 9300 Width: 800 Height: 600&lt;br&gt;
+								&lt;/p&gt;
+								&lt;p&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;The Tropics: &lt;/b&gt;Left: 3300 Top: 4600 Width: 1664 Height: 1024 ---&amp;gt;&lt;a href=&quot;https://web.archive.org/web/20030626090746/http://mainframe.chani3.com/&quot; target=&quot;_new&quot;&gt;get it here&lt;/a&gt;&lt;br&gt;
+								&lt;b style=&quot;color: #ffffff&quot;&gt;&lt;br&gt;
+								Bug's Temple: &lt;/b&gt;Left: 4100, Top: 7600 Width: 1120 Height: 1008 Contact:---&amp;gt;&lt;a href=&quot;https://web.archive.org/web/20030626090746/http://www.pagan-gerbil.co.uk/bugslair/&quot; target=&quot;_new&quot;&gt;get it here&lt;/a&gt; &lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:twilightcat@hotmail.com&quot;&gt;&lt;br&gt;
+								&lt;/a&gt;&lt;/p&gt;
+							&lt;/ul&gt;
+						&lt;/div&gt;
+						&lt;center&gt;
+							&lt;p&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;In Development:&lt;/b&gt;&lt;/p&gt;
+						&lt;/center&gt;
+						&lt;div align=&quot;left&quot;&gt;
+							&lt;ul&gt;
+								&lt;p&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;Norngarden2: &lt;/b&gt;Left: 7000 Top: 3000 Width: 2816 Height: 896 Contact:&lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:tomtschek@wuk.at&quot;&gt;tomtschek&lt;/a&gt;&lt;br&gt;
+								&lt;br&gt;
+								&lt;b style=&quot;color: #ffffff&quot;&gt;Core Room &lt;/b&gt;&lt;font color=&quot;#ff00d7&quot; size=&quot;4&quot;&gt;*&lt;/font&gt;&lt;font color=&quot;#ffbc00&quot;&gt;&lt;b style=&quot;color: #ffffff&quot;&gt; &lt;/b&gt;&lt;/font&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;: &lt;/b&gt;Left: 0 Top: 5800 Width: 2945 Height: 770 Contact:&lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:DGERKE@neo.rr.com&quot;&gt;Bionorn&lt;/a&gt;&lt;br&gt;
+								&lt;b style=&quot;color: #ffffff&quot;&gt;Hydroponics Bay&lt;/b&gt;&lt;font color=&quot;#ff00d7&quot; size=&quot;4&quot;&gt;*&lt;/font&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;:&lt;/b&gt; Left: 0 Top: 6575 Width: 2050 Height: 1023 Contact:&lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:DGERKE@neo.rr.com&quot;&gt;Bionorn&lt;/a&gt;&lt;br&gt;
+								&lt;br&gt;
+								&lt;b style=&quot;color: #ffffff&quot;&gt;The Sahara: &lt;/b&gt;Left: 0 Top: 7600 Width: 4096 Height: 1024 Contact:&lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:ryan.mansfield@ns.sympatico.ca&quot;&gt;MNB&lt;/a&gt;&lt;br&gt;
+								&lt;br&gt;
+								&lt;b style=&quot;color: #ffffff&quot;&gt;Ostrova: &lt;/b&gt;Left: 5640 Top: 7433 Width: 2940 Height: 1204 Contact:&lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:ali@albia2000.co.uk&quot;&gt;Ali&lt;/a&gt;&lt;br&gt;
+								&lt;br&gt;
+								&lt;b style=&quot;color: #ffffff&quot;&gt;Mer World&lt;/b&gt;&lt;font color=&quot;#ff00d7&quot; size=&quot;4&quot;&gt;*&lt;/font&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;: &lt;/b&gt;Left: 8200 Top: 6380 Width: 1664 Height: 1024 Contact:&lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:alien.creatures@att.net&quot;&gt;Patrick&lt;/a&gt;&lt;br&gt;
+								&lt;b style=&quot;color: #ffffff&quot;&gt;Geat Terrarium&lt;/b&gt;&lt;font color=&quot;#ff00d7&quot; size=&quot;4&quot;&gt;*&lt;/font&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;: &lt;/b&gt;Left: 5650 Top: 5980 Width: 2520 Height: 1440 Contact:&lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:alien.creatures@att.net&quot;&gt;Patrick&lt;/a&gt;&lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:dc13@hotmail.com&quot;&gt;&lt;br&gt;
+								&lt;/a&gt;&lt;br&gt;
+								&lt;b style=&quot;color: #ffffff&quot;&gt;Seaweed Tavern(ST): &lt;/b&gt;Left: 3300 Top: 5625 Width: 800 Height: 600 Contact:&lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:tombachilius@hotmail.com&quot;&gt;Trollop&lt;/a&gt;&lt;br&gt;
+								&lt;br&gt;
+								&lt;b style=&quot;color: #ffffff&quot;&gt;Terra: &lt;/b&gt;&lt;font color=&quot;#ff00d7&quot; size=&quot;4&quot;&gt;*&lt;/font&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;(public beta is out- took the coors from there) &lt;/b&gt;Left: 5000 Top: 5000 Width: 2000 Height: 680 No Contact!&lt;br&gt;
+								&lt;/p&gt;
+								&lt;p&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;The Void&lt;/b&gt;&lt;font color=&quot;#ff00d7&quot; size=&quot;4&quot;&gt;*&lt;/font&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;: &lt;/b&gt;Left: 3149 Top: 6569 Width: 4750 Height: 1030 Contact: &lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:dc13@hotmail.com&quot;&gt;Darcie Clements &lt;/a&gt;&lt;/p&gt;
+								&lt;p&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;Graveyard: &lt;/b&gt;Left: 9100, Top: 650 Width: 800 Height: 600 Contact: &lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:chani@aebc.com&quot;&gt;Chani&lt;/a&gt;&lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:chani@aebc.com&quot;&gt;&lt;br&gt;
+								&lt;/a&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;GuiRoom: &lt;/b&gt;Left: 3050, Top: 1400 Width: 5 Height: 50 Contact: &lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:chani@aebc.com&quot;&gt;Chani&lt;br&gt;
+								&lt;/a&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;Corridor room: &lt;/b&gt;Left: 8300, Top: 5400 Width: 1200 Height: 900 Contact:&lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:chani@aebc.com&quot;&gt;Chani&lt;/a&gt;&lt;/p&gt;
+								&lt;p&gt;&lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:chani@aebc.com&quot;&gt;&lt;br&gt;
+								&lt;/a&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;The Dollhouse&lt;/b&gt;&lt;font color=&quot;#ff00d7&quot; size=&quot;4&quot;&gt;*&lt;/font&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;: &lt;/b&gt; Left: 5640 Top: 7433 Width: 2940 Height: 1204Contact: &lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:sara_dippity@yahoo.com&quot;&gt;Tessa&lt;br&gt;
+								&lt;/a&gt;&lt;/p&gt;
+								&lt;p&gt;&lt;b style=&quot;color: #ffffff&quot;&gt;C1 in DS:(outside the standard map) &lt;/b&gt;Left: 0, Top: 10000 Width: 11520 Height: 1196 Contact: &lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:clucky@attbi.com&quot;&gt;Clucky&lt;br&gt;
+								&lt;br&gt;
+								&lt;/a&gt;&lt;br&gt;
+								&lt;/p&gt;
+								&lt;p&gt;&lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:clucky@attbi.com&quot;&gt;&lt;br&gt;
+								&lt;/a&gt;&lt;font color=&quot;#ff00d7&quot; size=&quot;4&quot;&gt;*&lt;/font&gt;this means I did not receive any feedback when I asked the developer if the project was still alive in october 02 so these rooms will be removed from the roomplan soon.&lt;/p&gt;
+								&lt;p&gt;!If you are plannig to bring out a new room please &lt;a href=&quot;https://web.archive.org/web/20030626090746/mailto:tomtschek@wuk.at&quot;&gt;mail tomtschek@wuk.at &lt;/a&gt;the exact location and size of your room and I will update the plan. If there are overlaps I can inform you but it is your decision what you want to do.&lt;br&gt;
+								*The data about the C3 rooms is taken from the old roomplan at &lt;a href=&quot;https://web.archive.org/web/20030626090746/http://www.terrarium.f9.co.uk/development/roomplan.html&quot; target=&quot;_new&quot;&gt;the terrarium&lt;/a&gt;&lt;br&gt;
+								&lt;br&gt;
+								&lt;br&gt;
+								&lt;font color=&quot;#ff00d7&quot; size=&quot;4&quot;&gt;*&lt;/font&gt;
+							&lt;/p&gt;&lt;/ul&gt;
+						&lt;/div&gt;
+</pre>
 </div>
 <div created="20210601151030581" creator="zeid" modified="20210922093522418" modifier="zeid" tags="разное" title="Sigma-3">
 <pre>* 25.02 
